ViteReact_Dashboard_Estrera

--- a/dashboard.html
+++ b/dashboard.html
@@ -53,7 +53,7 @@
             }
         });
 
-        // Sidebar Toggle Functionality
+        // Sidebar Toggle 
         const dashboardToggle = document.getElementById("dashboard-toggle");
         const sidebar = document.getElementById("sidebar-wrapper");
 
