--- a/registration.html
+++ b/registration.html
@@ -39,7 +39,7 @@
             localStorage.setItem("password", password);
 
             alert("Registration successful! You can now log in.");
-            window.location.href = "file:///C:/Users/User/Desktop/SysArch/login.html"; // Redirect to login page
+            window.location.href = "file:///C:/Users/User/Desktop/SysArch/login.html"; // Redirects to login page
         });
     </script>
 
